complex/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    # create ingress controller based on nginx project
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # expect to get certificate from this issuer
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    # serve up https traffic on these domains
    - hosts:
        - testdomainname.org
        - www.testdomainname.org
      # certificate that allows us to do this
      secretName: testdomainname-com
  rules:
    - host: testdomainname.org
      http:
        paths:
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - pathType: Prefix
            path: /api/?(.*)
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
    - host: www.testdomainname.org
      http:
        paths:
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - pathType: Prefix
            path: /api/?(.*)
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
